valid_tests/functions/test7.go
func add(x int, y int) int {
    return x + y
}

func greet(name string, age int) {
    // função de exemplo
}

func main() {
    var result int
    result = add(5, 3)
}
